- fixed several bugs related to hashing of constraints/rows in cutpool.c and cons_linear.c
- fixed aggregation of variables in boundshift presolver that contain large variable bounds
- fixed releasing of variables in the genvbounds propagator in case the problem could be solved during presolving of a restart
- fixed wrong mapping of permuted basis indices in gomory separator

added tests:
- added tests that cover nonempty linear constraint classification types

misc:
- dropped support for MOSEK < 7.0.0.0
- new type SCIP_Shortbool (equal to uint8_t) for storing Boolean values in a more compact manner


Makefile:
- default value for ZIMPL is now "false"
- new flag DEBUGSOL={true,false} to enable checks against a user given debug solution

SCIP version 4.0.1
==================

interface:
- add function SCIPsetSlackVarUb() to control upper bound of slack variable in cons_indicator
- SCIPheurPassIndicator has a new parameter which allows to pass the objective of the solution

parameters:
- new paramter "constraints/indicator/maxsepanonviolated" to stop separation after separation of non violated cuts

features
- added parsing functionality to cardinality constraint handler for CIP format
- added command line option '-o' and command 'validatesolve' in interactive shell
  to validate the solution against an external primal and dual reference value.
- allow to relax objective limit in reoptimization in presolved stage
- suppress excessive printing about numerical troubles in LP on default verblevel (high)
- updated Mosek interface to compile with Mosek 8.1, too
- updates GAMS interface to latest version
- new LP interface to Glop (Google OR tools); CMake only


fixed bugs:
- fixed bug in shift and propagate--variable information with a negation transformation is correctly reset after backtracking
- fixed bug in genvbounds propagator when applying a restart after the root node
- fixed unintended behavior of interrupt signal handler inside SCIP copies